Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
W
weston
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 282
    • Issues 282
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 131
    • Merge Requests 131
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI/CD
    • Repository
    • Value Stream
  • Members
    • Members
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • wayland
  • weston
  • Issues
  • #25

Closed
Open
Created Jun 06, 2018 by Daniel Stone@danielsOwner

Pull atomic output config doc into GitLab

The documentation for the proposed libweston atomic output configuration API is one of the last things we have left on the Phabricator wiki, which I would dearly like to kill.

It would be nice to reproduce this into a GitLab issue. The sequence diagrams can either be attached directly, or reproduced through Mermaid, which also allows for inline edits, e.g.:

sequenceDiagram
    participant Compositor
    participant libweston
    participant Backend
    participant KMS
    Compositor->libweston: Here is my output configuration
    libweston->Backend: Could you please try this output configuration
    loop Try configuration
        Backend->KMS: Hi can you apply this config
        KMS->Backend: Absolutely not
    end
    Note right of KMS: Fine I give up
    Backend->libweston: No
    libweston->Compositor: This is not a good configuration
    Compositor-->Backend: why do you always make life difficult
    Backend-->Compositor: sorry I'm doing my best over here
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None